...
    "action.open": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Open"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Abrir"
...
    "launcher.actions": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Actions"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Acciones"
...
    "launcher.search.accessibilityLabel": {
      "extractionState": "stale",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Search"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Buscar"
...
